--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
 
-    <title>Soltee Loyalty</title>
+    <title>Heritage Club</title>
   </head>
   <body>
     <div id="root"></div>
